--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/react": "^19.1.4",
     "@vercel/og": "^0.6.8",
     "react": "^19.1.0"
   }
