--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/react": "^19.1.4",
     "@vercel/og": "^0.6.8",
     "react": "^19.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.17"
   }
 }
